Added some explanations

--- a/Dataset.ipynb
+++ b/Dataset.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,16 +46,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e0cc1f6660>"
+       "<matplotlib.legend.Legend at 0x1e0c587d5e0>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -82,26 +82,30 @@
    "source": [
     "## Creating training, validation and testing dataset\n",
     "\n",
-    "- Our dataset should be in the form $\\{(x_t,y_t)\\}_{t=n,...,N}$, where $x_t$ is the vector containing all prices between time $t-n$ and time $t$, and $y_t$ is the vector containing prices at time $t+1$."
+    "- For each ticker, we create a dataset of the form $\\{(x_t,y_t)\\}_{t=n,...,N}$, where $x_t$ is the vector containing all prices between time $t-n$ and time $t$, and $y_t$ is the vector containing prices at time $t+1$.\n",
+    "\n",
+    "- We will experiment with predicting a time series based on its previous prices for the last $n$ days\n",
+    "\n",
+    "- If we want to include more predicting variables, such as daily high and low and volumes, they can just be added in the definition of <ts>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ts_split(ts, feature_steps=4, target_steps=1):\n",
+    "def ts_split(ts, feature_steps=10, target_steps=1):\n",
     "    n_obs = len(ts) - feature_steps - target_steps + 1\n",
-    "    X = np.array([ts[idx:idx + feature_steps] for idx in range(n_obs)])\n",
-    "    y = np.array([ts[idx + feature_steps:idx + feature_steps + target_steps]\n",
+    "    X = np.array([ts[idx:idx + feature_steps].flatten() for idx in range(n_obs)])\n",
+    "    y = np.array([ts[idx + feature_steps:idx + feature_steps + target_steps][:, -1]\n",
     "                  for idx in range(n_obs)])\n",
     "    return X, y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +122,7 @@
     "split_ind = {}\n",
     "split_ind_2 = {}\n",
     "for name, data in tickers:\n",
-    "    ts = data[['BIDLO','ASKHI','VOL','PRC']].values.flatten()\n",
+    "    ts = data[['PRC']].values#.flatten()\n",
     "    X[name], y[name] = ts_split(ts)\n",
     "    split_ind[name] = int(X[name].shape[0]*0.8)\n",
     "    X_train_full[name], y_train_full[name] = X[name][:split_ind[name]], y[name][:split_ind[name]]\n",
@@ -126,6 +130,69 @@
     "    split_ind_2[name] = int(X_train_full[name].shape[0]*0.8)\n",
     "    X_train[name], y_train[name] = X_train_full[name][:split_ind_2[name]], y_train_full[name][:split_ind_2[name]]\n",
     "    X_valid[name], y_valid[name] = X_train_full[name][split_ind_2[name]:], y_train_full[name][split_ind_2[name]:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[101.12  97.4  101.93 102.06 102.8  104.27 103.6  102.8  102.05 105.01]\n",
+      "[ 97.4  101.93 102.06 102.8  104.27 103.6  102.8  102.05 105.01 105.38]\n",
+      "[105.38]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train['SPY'][0])\n",
+    "print(X_train['SPY'][1])\n",
+    "print(y_train['SPY'][0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example for linear regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "y_pred = {}\n",
+    "model = LinearRegression()\n",
+    "model.fit(X_train['SPY'], y_train['SPY'].ravel())\n",
+    "y_pred['SPY'] = model.predict(X_test['SPY'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(4.795295140884627)"
+      ]
+     },
+     "execution_count": 234,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "np.sqrt(mean_squared_error(y_test['SPY'], y_pred['SPY']))"
    ]
   }
  ],
