added some comments

--- a/Dataset.ipynb
+++ b/Dataset.ipynb
@@ -135,6 +135,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check results:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
