--- a/Dataset.ipynb
+++ b/Dataset.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Preparing the dataset\n",
+    "## Preparing the data\n",
     "\n",
     "We split the dataset into training, validation and test datasets.\n",
     "\n",
