--- a/RNN and RNN DO_test.ipynb
+++ b/RNN and RNN DO_test.ipynb
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
     "    \n",
     "    # Build RNN model\n",
     "    model = Sequential()\n",
-    "    model.add(SimpleRNN(units=50, activation='relu', input_shape=input_shape))  # You can switch to LSTM or GRU if needed\n",
+    "    model.add(SimpleRNN(units=50, activation='relu', input_shape=input_shape))  \n",
     "    model.add(Dropout(0.2))  # Add dropout for regularization\n",
     "    model.add(Dense(units=output_units))  # Output layer\n",
     "    model.compile(optimizer='adam', loss='mean_squared_error')  # Compile the model\n",
