--- a/Main.ipynb
+++ b/Main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from statsmodels.tsa.arima.model import ARIMA\n",
     "\n",
-    "Model = RC(order = (20,0,2))\n",
+    "Model = RC()\n",
     "\n",
     "for m in [LinearRegression,ARIMA]:\n",
     "    Model.Prediction(m)\n",
