RNNclass added scale, batchnorm, dropout options

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -4,6 +4,19 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from RegressionEnvs import RegressionClass as RC\n",
+    "from RNNEnvs import RNNClass as RNN \n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from statsmodels.tsa.arima.model import ARIMA\n",
+    "from tensorflow.keras.layers import SimpleRNN, LSTM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -21,17 +34,24 @@
     }
    ],
    "source": [
-    "from RegressionEnvs import RegressionClass as RC\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from statsmodels.tsa.arima.model import ARIMA\n",
-    "\n",
-    "Model = RC()\n",
+    "Model = RC(order=(20,0,2))\n",
     "\n",
     "for m in [LinearRegression,ARIMA]:\n",
     "    Model.Prediction(m)\n",
+    "    Model.Visualization(m,False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Model = RNN()\n",
     "\n",
-    "for m in [LinearRegression,ARIMA]:\n",
-    "    Model.Visualization(m,False)\n"
+    "for m in [SimpleRNN,LSTM]:\n",
+    "    Model.Prediction(m)\n",
+    "    Model.Visualization(m,False)"
    ]
   },
   {
