plot prices regression

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
     }
    ],
    "source": [
-    "Model = RC(order=(20,0,2))\n",
+    "Model = RC()\n",
     "\n",
     "for m in [LinearRegression,ARIMA]:\n",
     "    Model.Prediction(m)\n",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
    ],
    "source": [
     "for m in [LinearRegression,ARIMA]:\n",
-    "    Model.Visualization(m,True)"
+    "    Model.Visualization(m,True,logdiff=True)"
    ]
   }
  ],
